--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev
+          sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev libfuse2
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
@@ -31,8 +31,40 @@ jobs:
       - name: Build Linux
         run: flutter build linux --release
 
+      - name: Create AppImage
+        env:
+          APPIMAGE_EXTRACT_AND_RUN: 1
+        run: |
+          # Download linuxdeploy
+          wget https://github.com/linuxdeploy/linuxdeploy/releases/download/continuous/linuxdeploy-x86_64.AppImage
+          chmod +x linuxdeploy-x86_64.AppImage
+
+          # Setup AppDir
+          mkdir -p AppDir/usr/bin
+          cp -r build/linux/x64/release/bundle/* AppDir/usr/bin/
+          
+          # Create Desktop file
+          cat > incogni_owl.desktop <<EOF
+          [Desktop Entry]
+          Name=Incogni Owl
+          Exec=incogni_owl
+          Icon=incogni_owl
+          Type=Application
+          Categories=Utility;
+          EOF
+          
+          # Use Android launcher icon
+          cp android/app/src/main/res/mipmap-xxxhdpi/ic_launcher.png incogni_owl.png
+          
+          # Generate AppImage
+          ./linuxdeploy-x86_64.AppImage \
+            --appdir AppDir \
+            --desktop-file incogni_owl.desktop \
+            --icon-file incogni_owl.png \
+            --output appimage
+
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: linux-build
-          path: build/linux/x64/release/bundle/
+          name: linux-appimage
+          path: "*.AppImage"
